[package]
name = "blueprints"
description = "A layout tool to use Common Mark like semantics to generate application layouts"
version = "0.1.0"
authors = ["Michael Christenson II <xorsense@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
